# parallel_prefix_scan_lib

./: CMakeLists.txt  README.md
include/: scan_kernels.cuh  utils.cuh
output/: histogram.txt  offset.txt
sample/: sample1000000_512.txt  sample50000000_256.txt
src/: main.cu  scan_kernels.cu  utils.cu
